@@ -45,6 +45,9 @@
    - markus@cvs.openbsd.org 2001/12/27 18:26:13
      [authfile.c]
      missing include
+   - markus@cvs.openbsd.org 2001/12/27 19:37:23
+     [dh.c kexdh.c kexgex.c]
+     always use BN_clear_free instead of BN_free
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7192,4 +7195,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1735 2002/01/22 12:10:04 djm Exp $
+$Id: ChangeLog,v 1.1736 2002/01/22 12:10:33 djm Exp $
